--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "sass": "^1.15.3"
   },
   "dependencies": {
+    "fizzy-ui-utils": "^2.0.7",
+    "flickity": "^2.2.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6"
   }
